[project]
name = "wizard-template"
description = "A template for a python project containing a library, tests, docs, and CI/CD."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Felipe N. Schuch", email = "me@fschuch.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Source = "https://github.com/fschuch/wizard-template"
Tracker = "https://github.com/fschuch/wizard-template/issues"
Changelog = "https://github.com/fschuch/wizard-template/releases"
Documentation = "https://fschuch.github.io/wizard-template/"

[project.scripts]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--doctest-modules",
    "--doctest-glob='*.md'",
    "--doctest-continue-on-failure",
    "--doctest-report=ndiff",
]

[tool.coverage.run]
branch = true
source_pkgs = ["wizard_template", "tests"]
omit = ["wizard_template/_version.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend-exclude = ["./docs/conf.py"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"] # imported but unused
"*.ipynb" = ["E402"]     # module level import not at top of file

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true
ignore_missing_imports = true
exclude = ["docs/conf.py"]

[tool.codespell]
skip = "docs/conf.py"
check-filenames = true

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"
